# pkg/models/forms/userData.go
@@ -43,3 +43,8 @@ type PasswordChangeInput struct {
 	OldPassword string `json:"old_password" binding:"required"`
 	NewPassword string `json:"new_password" binding:"required"`
 }
+
+type AddUserToFavourite struct {
+	UserId uint   `json:"user_id"`
+	Status string `json:"status"`
+}
